pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-service-unavailable-default-backend.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-service-unavailable-default-backend
  namespace: default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: unavailable
      port:
        number: 80
  rules:
    - host: whoami.localhost
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  number: 80
            path: /foo
            pathType: Prefix
